--- a/MyPaint.csproj
+++ b/MyPaint.csproj
@@ -46,16 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Figures\IFigureCreator.cs" />
-    <Compile Include="Figures\Figure.cs" />
-    <Compile Include="Figures\MyEllipse.cs" />
-    <Compile Include="Figures\MyRectangle.cs" />
+    <Compile Include="IFigureCreator.cs" />
+    <Compile Include="Figure.cs" />
+    <Compile Include="MyEllipse.cs" />
+    <Compile Include="MyRectangle.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="Manipulator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Main.resx">
