--- a/MyPaint.csproj
+++ b/MyPaint.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Group.cs" />
     <Compile Include="IFigureCreator.cs" />
     <Compile Include="Figure.cs" />
     <Compile Include="MyEllipse.cs" />
