--- a/MyPaint.csproj
+++ b/MyPaint.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Group.cs" />
+    <Compile Include="GroupCreator.cs" />
     <Compile Include="IFigureCreator.cs" />
     <Compile Include="Figure.cs" />
     <Compile Include="MyEllipse.cs" />
