--- a/MyPaint.csproj
+++ b/MyPaint.csproj
@@ -47,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ICommand.cs" />
-    <Compile Include="DrawCommand.cs" />
+    <Compile Include="Command.cs" />
     <Compile Include="Group.cs" />
     <Compile Include="GroupCreator.cs" />
     <Compile Include="IFigureCreator.cs" />
